Make sure input and output share the same word-wrap style

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   border: none;
   outline: none;
   resize: none;
+  word-wrap: break-word;
 }
 
 .input {
